fixed overflow of company name in cards when there are no spaces in the name

--- a/public/css/search.css
+++ b/public/css/search.css
@@ -25,6 +25,7 @@ body,html{
     top:10px;
     background: none;
     height: auto;
+    width: 100%;
 }
 
 .card-header{
